# tangara-fw

./: .clang-format  .env  .env.fish  .env.ps1  .gitignore  .gitmodules  .luarc.json  BUILDING.md  CMakeLists.txt  README.md  TESTING.md  common.cmake  config.ld  partitions.csv  sdkconfig  sdkconfig.common  sdkconfig.debug  sdkconfig_wip
lib/catch2/: CMakeLists.txt  catch2.cpp  catch_runner.cpp
lib/catch2/include/: catch_runner.hpp
lib/libmad/: CMakeLists.txt  Makefile.in  aclocal.m4  configure  configure.ac
lib/libmad/msvc++/: Makefile.in
lib/libsamplerate/: CMakeLists.txt
lib/opusfile/: CMakeLists.txt
lib/opusfile/include/: custom_support.h
lib/speexdsp/: CMakeLists.txt
lib/speexdsp/libspeexdsp/: config.h
lib/speexdsp/win32/: Makefile.in
lib/tremor/: CMakeLists.txt  asm_arm.h  bitwise.c  codebook.c  codebook.h  codec_internal.h  config_types.h  dsp.c  floor0.c  floor1.c  floor_lookup.c  framing.c  info.c  ivorbiscodec.h  ivorbisfile.h  ivorbisfile_example.c  lsp_lookup.h  mapping0.c  mdct.c  mdct_lookup.h  misc.c  misc.h  os.h  os_types.h  res012.c  tremor_ogg.h  vorbisfile.c  window_lookup.h
main/: CMakeLists.txt  battery.cpp  battery.h  battery.hpp  dac.cpp  dac.h  dac.hpp  display.cpp  display.hpp  gay-ipod-fw.cpp  gpio-expander.cpp  gpio-expander.h  gpio-expander.hpp  i2c.cpp  i2c.h  i2c.hpp  playback.cpp  playback.h  playback.hpp  storage.cpp  storage.h  storage.hpp  trackpad.cpp  trackpad.hpp
src/audio/: CMakeLists.txt  README.md  audio_converter.cpp  audio_decoder.cpp  audio_element.cpp  audio_element_handle.cpp  audio_fsm.cpp  audio_playback.cpp  audio_source.cpp  audio_task.cpp  bt_audio_output.cpp  chunk.cpp  fatfs_audio_input.cpp  fatfs_source.cpp  i2s_audio_output.cpp  pipeline.cpp  readahead_source.cpp  resample.cpp  sink_mixer.cpp  stream_buffer.cpp  stream_event.cpp  stream_info.cpp  stream_message.cpp  track_queue.cpp
src/audio/include/: audio_backend.hpp  audio_converter.hpp  audio_decoder.hpp  audio_element.hpp  audio_element_handle.hpp  audio_events.hpp  audio_fsm.hpp  audio_output.hpp  audio_playback.hpp  audio_sink.hpp  audio_source.hpp  audio_task.hpp  bt_audio_output.hpp  chunk.hpp  fatfs_audio_input.hpp  fatfs_source.hpp  i2s_audio_output.hpp  pipeline.hpp  readahead_source.hpp  resample.hpp  sink_mixer.hpp  stream_buffer.hpp  stream_event.hpp  stream_info.hpp  stream_message.hpp  track_queue.hpp
src/audio/test/: CMakeLists.txt
src/codecs/: CMakeLists.txt  README.md  codec.cpp  codec.hpp  dr_flac.cpp  foxenflac.cpp  mad.cpp  miniflac copy.cpp  miniflac.cpp  miniflac.cpp.bak2  native.cpp  ogg.cpp  opus.cpp  sample.cpp  source_buffer.cpp  stbvorbis.cpp  vorbis.cpp  wav.cpp
src/codecs/include/: codec.hpp  dr_flac.hpp  foxenflac.hpp  mad.hpp  miniflac.hpp  native.hpp  ogg.hpp  opus.hpp  sample.hpp  source_buffer.hpp  stbvorbis.hpp  types.hpp  vorbis.hpp  wav.hpp
src/codecs/test/: CMakeLists.txt  test.mp3.hpp  test_mad.cpp
src/database/: CMakeLists.txt  database.cpp  db_task.cpp  env_esp.cpp  file_gatherer.cpp  index.cpp  records.cpp  song.cpp  table.cpp  tag_parser.cpp  tag_processor.cpp  track.cpp
src/database/include/: database.hpp  db_events.hpp  db_task.hpp  env_esp.hpp  file_gatherer.hpp  future_fetcher.hpp  index.hpp  records.hpp  song.hpp  table.hpp  table_reader.hpp  table_writer.hpp  tag_parser.hpp  tag_processor.hpp  track.hpp
src/database/test/: CMakeLists.txt  test_database.cpp  test_records.cpp
src/drivers/: CMakeLists.txt  adc.cpp  audio_playback.cpp  battery.cpp  bluetooth.cpp  dac.cpp  digital_pot.cpp  display-init.cpp  display.cpp  display_init.cpp  driver_cache.cpp  gpio-expander.cpp  gpio_expander.cpp  gpios.cpp  haptics.cpp  i2c.cpp  i2s_audio_output.cpp  i2s_dac.cpp  nvs.cpp  pcm_buffer.cpp  playback.cpp  relative_wheel.cpp  samd.cpp  spi.cpp  spiffs.cpp  storage.cpp  touchwheel.cpp  trackpad.cpp  wm8523.cpp
src/drivers/include/: a2dp_audio_output.hpp  adc.hpp  audio_output.hpp  audio_playback.hpp  battery.hpp  bluetooth.hpp  bluetooth_types.hpp  dac.hpp  digital_pot.hpp  display-init.hpp  display.hpp  display_init.hpp  driver_cache.hpp  fatfs_audio_input.hpp  gpio_expander.hpp  gpios.hpp  haptics.hpp  i2c.hpp  i2s_audio_output.hpp  i2s_dac.hpp  nvs.hpp  playback.hpp  relative_wheel.hpp  samd.hpp  spi.hpp  spiffs.hpp  storage.hpp  touchwheel.hpp  trackpad.hpp  wm8523.hpp
src/drivers/test/: CMakeLists.txt  i2c_fixture.hpp  spi_fixture.hpp  test_adc.cpp  test_battery.cpp  test_dac.cpp  test_example.cpp  test_gpio_expander.cpp  test_samd.cpp  test_storage.cpp
src/input/: CMakeLists.txt  device_factory.cpp  feedback_haptics.cpp  input_hook.cpp  input_hook_actions.cpp  input_nav_buttons.cpp  input_touch_dpad.cpp  input_touch_wheel.cpp  input_trigger.cpp  input_volume_buttons.cpp  lvgl_input_driver.cpp
src/input/include/: input_device.hpp  input_hook.hpp  input_hook_actions.hpp  input_nav_buttons.hpp  input_touch_dpad.hpp  input_touch_wheel.hpp  input_trigger.hpp  input_volume_buttons.hpp  lvgl_input_driver.hpp
src/locale/: CMakeLists.txt  collation.cpp  strxfrm_l.c
src/locale/include/: collation.hpp  strxfrm.h
src/locale/priv_include/: weight.h
src/lua/: CMakeLists.txt  bridge.cpp  file_iterator.cpp  lua_database.cpp  lua_filesystem.cpp  lua_queue.cpp  lua_screen.cpp  lua_theme.cpp  lua_thread.cpp  lua_version.cpp  property.cpp
src/lua/include/: bridge.hpp  file_iterator.hpp  lua_database.hpp  lua_filesystem.hpp  lua_thread.hpp  property.hpp
src/lua/stubs/: alerts.lua  bluetooth.lua  playback.lua  power.lua  queue.lua  types.lua  (+1 more)
src/system_fsm/: CMakeLists.txt  booting.cpp  idle.cpp  running.cpp  service_locator.cpp  system_fsm.cpp
src/tangara/: CMakeLists.txt
src/ui/: CMakeLists.txt  encoder_input.cpp  event_binding.cpp  font_fusion.c  font_fusion_10.c  font_symbols.c  lvgl_task.cpp  modal.cpp  modal_add_to_queue.cpp  modal_confirm.cpp  modal_progress.cpp  screen.cpp  screen_lua.cpp  screen_menu.cpp  screen_onboarding.cpp  screen_playing.cpp  screen_settings.cpp  screen_splash.cpp  screen_track_browser.cpp  splash.c  themes.cpp  ui_fsm.cpp  wheel_encoder.cpp  widget_top_bar.cpp
(+432 files in other folders)
